# deep_phylo

./: .gitignore  README.md  pyproject.toml
deep_phylo/: __main__.py  aln.py  aln_processing.py  annots.py  cluster.py  curation.py  file_util.py  hmm.py  phylo_partition.py  search.py  smart_trim.py  tree.py  workflows.py
